--- a/views/users.ejs
+++ b/views/users.ejs
@@ -19,6 +19,7 @@
         <td><%= user.email %></td>
         <td><%= user.age %></td>
         <td><%= user.country %></td>
+        <td><a href="/users/<%= user.id %>/edit">✏️ Edit User</a></td>
       </tr>
     <% }) %>
         
