--- a/views/users.ejs
+++ b/views/users.ejs
@@ -20,6 +20,9 @@
         <td><%= user.age %></td>
         <td><%= user.country %></td>
         <td><a href="/users/<%= user.id %>/edit">✏️ Edit User</a></td>
+        <td><form action="/users/<%= user.id %>/delete" method="POST" onsubmit="return confirm('Are you sure?');">
+  <button class="btn btn-danger">Delete</button>
+</form></td>
       </tr>
     <% }) %>
         
